Moved to INSTALL.xml

--- a/astrogrid/mySpace/xdocs/INSTALL
+++ b/astrogrid/mySpace/xdocs/INSTALL
@@ -1,3 +1,4 @@
+Moved to INSTALL.xml - please edit that instead...
 AstroGrid Iteration 4 Kit.                                    MySpace service
 AstroGrid home page: http://www.astrogrid.org/
 
