added info about JNDI entries

--- a/astrogrid/mySpace/xdocs/INSTALL
+++ b/astrogrid/mySpace/xdocs/INSTALL
@@ -15,7 +15,7 @@ This document is an incomplete draft.  Please send comments to acd@roe.ac.uk
                                --- DRAFT ---
 
                         A C Davenhall and J D Taylor
-                         Version 3, 23 January 2004
+                         Version 3b, 23 January 2004
 
 
 Purpose and Status of this Document
@@ -195,16 +195,26 @@ To install an AstroGrid MySpace service proceed as follows.
 
     $CATALINA_HOME/webapps/astrogrid-mySpace/ASTROGRID_myspacemanagerconfig.xml
 
-   to the directory:
+    to the directory:
 
      $CATALINA_HOME/webapps/astrogrid-mySpace/WEB-INF/classes
      
-   (The file is not automatically placed in this directory so that
-   existing configurations are not lost if you are updating an installation.)
-   Then edit the copy:
+     Alternatively, place the file on a web server and place its URL in JNDI by editing
+     $CATALINA_HOME/conf/servers.xml - make an environment entry org.astrogrid.mySpace.config.url
+     e.g. under <DefaultContext> place:
 
-     $CATALINA_HOME/webapps/astrogrid-mySpace/WEB-INF/classes/
-                                           ASTROGRID_myspacemanagerconfig.xml
+		<Environment description="MySpace Config URL" 
+					 name="org.astrogrid.mySpace.config.url" 
+					 override="false" type="java.lang.String" 
+					 value="http://localhost:8080/ASTROGRID_myspacemanagerconfig.xml"/>
+	
+	 and restart the webserver.
+     
+     This latter approach will ensure that the config file will not get wiped between installations.
+
+   Then edit the file:
+
+     ASTROGRID_myspacemanagerconfig.xml
 
    Edit the properties MYSPACEMANAGERURL and MYSPACEMANAGERURLs and set
    both their values to:
@@ -316,6 +326,7 @@ Version 2, 6/1/04:  Minor corrections, added section on building   (ACD, JDT)
                     from source.                                  
 Version 3, 23/1/04: Tweaks to instructions for editing
                     ASTROGRID_myspacemanagerconfig.xml.            (JDT, ACD)
+Version 3b, 23/1/04: JNDI instructions                             (JDT, ACD)
 
 -----------------------------------------------------------------------------
 AstroGrid Iteration 4 Kit.                                    MySpace service
